@@ -20,6 +20,8 @@ package org.eclipse.scanning.test.scan.nexus;
 
 import java.io.File;
 import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
 
 import org.eclipse.scanning.api.device.IRunnableDevice;
 import org.eclipse.scanning.api.device.IRunnableEventDevice;
@@ -44,9 +46,9 @@ class MalcolmAcquireTest extends AbstractMalcolmScanTest {
 	@Override
 	protected DummyMalcolmModel createMalcolmModel() {
 		final DummyMalcolmModel model = createMalcolmModelTwoDetectors();
-		model.setAxesToMove(Arrays.asList("stage_x", "stage_y" ));
-		model.setPositionerNames(Arrays.asList("stage_x", "j1", "j2", "j3"));
-		model.setMonitorNames(Arrays.asList("i0"));
+		model.setAxesToMove(List.of(X_AXIS_NAME, Y_AXIS_NAME));
+		model.setPositionerNames(Stream.concat(Stream.of(X_AXIS_NAME), Arrays.stream(Y_AXIS_JACK_NAMES)).toList());
+		model.setMonitorNames(List.of(MONITOR_NAME));
 
 		return model;
 	}
